lizards-were-harder

--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/Human/ears.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/Human/ears.yml
@@ -6,5 +6,5 @@
   forcedColoring: true
   followSkinColor: true
   sprites:
-  - sprite: Mobs/Customization/ears.rsi
+  - sprite: Mobs/Customization/Human/ears.rsi
     state: long_ears
