pride cloaks in the uniform printer

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1122,6 +1122,16 @@
       - CarpetPurple
       - CarpetCyan
       - CarpetWhite
+      # Pride Cloaks
+      - ClothingNeckCloakTrans
+      - ClothingNeckCloakAce
+      - ClothingNeckCloakAro
+      - ClothingNeckCloakBi
+      - ClothingNeckCloakIntersex
+      - ClothingNeckCloakLesbian
+      - ClothingNeckCloakGay
+      - ClothingNeckCloakEnby
+      - ClothingNeckCloakPan
   - type: EmagLatheRecipes
     emagStaticRecipes:
       - ClothingHeadHatCentcomcap
