allow fire extinguishers and sprays to push grids

--- a/Resources/Prototypes/Entities/Objects/Misc/fire_extinguisher.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/fire_extinguisher.yml
@@ -30,6 +30,7 @@
   - type: Spray
     transferAmount: 10
     pushbackAmount: 60
+    gridPushbackAmount: 2
     spraySound:
       path: /Audio/Effects/extinguish.ogg
     sprayedPrototype: ExtinguisherSpray
