Added AI wires to a couple machines.

--- a/Resources/Prototypes/Entities/Structures/Machines/jukebox.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/jukebox.yml
@@ -29,6 +29,12 @@
     interfaces:
         enum.JukeboxUiKey.Key:
           type: JukeboxBoundUserInterface
+        enum.WiresUiKey.Key:
+          type: WiresBoundUserInterface
+  - type: WiresPanel
+  - type: Wires
+    boardName: wires-board-name-jukebox
+    layoutId: Jukebox
   - type: Damageable
     damageContainer: Inorganic
     damageModifierSet: Metallic
