--- a/Resources/Prototypes/Ronstation/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Objects/Devices/pda.yml
@@ -26,3 +26,21 @@
       whitelist:
         components:
           - Cartridge
+
+- type: entity
+  parent: [ BasePDA, BaseCommandContraband ]
+  id: BlueshieldPDA
+  name: Blueshield PDA
+  description: Might allow you to see who to protect through the crew manifest.
+  components:
+  - type: Sprite
+    sprite: Ronstation/Objects/Devices/pda.rsi
+  - type: Pda
+    id: BlueshieldIDCard
+    state: pda-blueshield
+  - type: PdaBorderColor
+    borderColor: "#0071B7"
+    accentHColor: "#E2E2E2"
+  - type: Icon
+    sprite: Ronstation/Objects/Devices/pda.rsi
+    state: pda-blueshield
