--- a/Resources/Prototypes/Ronstation/Maps/saltern-2.yml
+++ b/Resources/Prototypes/Ronstation/Maps/saltern-2.yml
@@ -18,6 +18,7 @@
           availableJobs:
             #service
             Captain: [ 1, 1 ]
+            BlueshieldOfficer: [ 1, 1 ]
             HeadOfPersonnel: [ 1, 1 ]
             Bartender: [ 1, 1 ]
             Botanist: [ 1, 2 ]
