--- a/Resources/Maps/Ronstation/cluster-2.yml
+++ b/Resources/Maps/Ronstation/cluster-2.yml
@@ -56770,20 +56770,6 @@ entities:
     - type: Transform
       pos: 0.4215492,21.564632
       parent: 1
-- proto: MaterialReclaimer
-  entities:
-  - uid: 7289
-    components:
-    - type: Transform
-      pos: 21.5,-24.5
-      parent: 1
-- proto: MaterialReclaimerMachineCircuitboard
-  entities:
-  - uid: 9518
-    components:
-    - type: Transform
-      pos: -2.569489,-34.556107
-      parent: 1
 - proto: MaterialWoodPlank
   entities:
   - uid: 8495
@@ -66888,6 +66874,13 @@ entities:
     components:
     - type: Transform
       pos: 2.5,6.5
+      parent: 1
+- proto: SpawnPointBlueshieldOfficer
+  entities:
+  - uid: 7289
+    components:
+    - type: Transform
+      pos: -3.5,29.5
       parent: 1
 - proto: SpawnPointBorg
   entities:
