Minor access fix.

--- a/Resources/Prototypes/Ronstation/Roles/Jobs/Command/blueshield_officer.yml
+++ b/Resources/Prototypes/Ronstation/Roles/Jobs/Command/blueshield_officer.yml
@@ -17,7 +17,7 @@
   supervisors: job-supervisors-centcom
   canBeAntag: false
   access:
-  - Bridge
+  - Command
   - Maintenance
   - External
   - Cryogenics
