--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
@@ -909,11 +909,12 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
-    sprite: /Textures/Effects/lightning.rsi
+    sprite: /Textures/Effects/techanom_beam.rsi
     drawdepth: Effects
     layers:
-    - state: "lightning_1"
+    - state: beam
       shader: unshaded
+      color: "#21c4ff"
   - type: Physics
     canCollide: false
   - type: PointLight
@@ -924,9 +925,8 @@
     autoRot: true
     castShadows: false
   - type: Beam
-    #sound: /Audio/Effects/Lightning/lightningshock.ogg
   - type: TimedDespawn
-    lifetime: 3
+    lifetime: 2.3
   - type: Tag
     tags:
       - HideContextMenu
