fix tests. i hope

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -816,6 +816,7 @@
       - WeaponDisablerSMG
       - WeaponLaserCannon
       - WeaponLaserCarbine
+      - WeaponTemperatureGun
       - WeaponXrayCannon
   - type: MaterialStorage
     whitelist:
