Readded Heccdiver ID card after being mistakenly deleted.

--- a/Resources/Prototypes/Ronstation/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Ronstation/Entities/Objects/Misc/identification_cards.yml
@@ -2,6 +2,20 @@
 #IDs with layers
 
 - type: entity
+  parent: [ IDCardStandard, BaseTerragovContraband ]
+  id: HeccdiverIDCard
+  name: heccdiver ID card
+  components:
+  - type: Sprite
+    sprite: Ronstation/Objects/Misc/id_cards.rsi
+    layers:
+     - state: heccdiver
+  - type: Access
+    tags:
+    - HeccDiver
+    - TerraGov
+
+- type: entity
   parent: [ IDCardStandard, BaseCommandContraband ]
   id: BlueshieldIDCard
   name: blueshield ID card
