--- a/Resources/Prototypes/Entities/Mobs/Species/snail.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/snail.yml
@@ -5,6 +5,8 @@
   id: BaseMobSnail
   abstract: true
   components:
+  - type: SnailSpeed
+    snailSlowdownModifier: 0.5
   - type: Absorbable
   - type: Hunger
   - type: Thirst
