--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
@@ -408,6 +408,20 @@
         Quantity: 30
 
 - type: entity
+  parent: CleanerGrenade
+  id: CleanerGrenadeAcid
+  suffix: Acid
+  components:
+  - type: SmokeOnTrigger
+    duration: 30 # Spends longer dissolving people who don't or can't get out of the cloud
+    spreadAmount: 75 # It's technically better at cleaning
+    smokePrototype: Foam
+    solution:
+      reagents:
+      - ReagentId: UniversalSolvent
+        Quantity: 30
+
+- type: entity
   parent: SmokeGrenade
   id: TearGasGrenade
   name: tear gas grenade
