--- a/Resources/Prototypes/Recipes/Reactions/cleaning.yml
+++ b/Resources/Prototypes/Recipes/Reactions/cleaning.yml
@@ -30,6 +30,18 @@
     SpaceCleaner: 2
 
 - type: reaction
+  id: UniversalSolvent
+  reactants:
+    FluorosulfuricAcid:
+      amount: 1
+    Bleach:
+      amount: 1
+    Vestine:
+      amount: 4
+  products:
+    UniversalSolvent: 6
+
+- type: reaction
   id: SpaceLube
   impact: Medium
   reactants:
