--- a/Resources/Maps/bagel.yml
+++ b/Resources/Maps/bagel.yml
@@ -14637,6 +14637,13 @@ entities:
     - type: Transform
       pos: 47.5,22.5
       parent: 60
+- proto: AsimovCircuitBoard
+  entities:
+  - uid: 25382
+    components:
+    - type: Transform
+      pos: -109.54202,8.593994
+      parent: 60
 - proto: AtmosDeviceFanDirectional
   entities:
   - uid: 280
@@ -16422,11 +16429,6 @@ entities:
       parent: 60
 - proto: BookshelfFilled
   entities:
-  - uid: 653
-    components:
-    - type: Transform
-      pos: -4.5,-2.5
-      parent: 60
   - uid: 655
     components:
     - type: Transform
@@ -16537,10 +16539,20 @@ entities:
       parent: 60
 - proto: BorgCharger
   entities:
+  - uid: 5014
+    components:
+    - type: Transform
+      pos: -114.5,15.5
+      parent: 60
   - uid: 5587
     components:
     - type: Transform
       pos: -34.5,12.5
+      parent: 60
+  - uid: 5795
+    components:
+    - type: Transform
+      pos: -108.5,15.5
       parent: 60
   - uid: 7086
     components:
@@ -16566,16 +16578,6 @@ entities:
     components:
     - type: Transform
       pos: -109.5,30.5
-      parent: 60
-  - uid: 21695
-    components:
-    - type: Transform
-      pos: -112.5,15.5
-      parent: 60
-  - uid: 21696
-    components:
-    - type: Transform
-      pos: -110.5,15.5
       parent: 60
 - proto: BoxBeaker
   entities:
@@ -62543,6 +62545,13 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 41.5,2.5
       parent: 60
+- proto: CorporateCircuitBoard
+  entities:
+  - uid: 25381
+    components:
+    - type: Transform
+      pos: -110.4639,8.578369
+      parent: 60
 - proto: CowToolboxFilled
   entities:
   - uid: 7795
@@ -64173,12 +64182,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 0.5,10.5
       parent: 60
-  - uid: 5795
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 0.5,-0.5
-      parent: 60
   - uid: 5889
     components:
     - type: Transform
@@ -64213,6 +64216,12 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 44.5,-8.5
+      parent: 60
+  - uid: 7648
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -0.5,-0.5
       parent: 60
   - uid: 7687
     components:
@@ -64410,6 +64419,52 @@ entities:
     components:
     - type: Transform
       pos: 57.5,24.5
+      parent: 60
+  - uid: 25358
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -2.5,-9.5
+      parent: 60
+  - uid: 25364
+    components:
+    - type: Transform
+      pos: -2.5,-3.5
+      parent: 60
+  - uid: 25365
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -3.5,-3.5
+      parent: 60
+  - uid: 25366
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -3.5,-0.5
+      parent: 60
+  - uid: 25372
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -0.5,0.5
+      parent: 60
+  - uid: 25373
+    components:
+    - type: Transform
+      pos: 1.5,0.5
+      parent: 60
+  - uid: 25374
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 1.5,-0.5
+      parent: 60
+  - uid: 25378
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 19.5,12.5
       parent: 60
 - proto: DisposalJunction
   entities:
@@ -64628,6 +64683,11 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 7.5,9.5
+      parent: 60
+  - uid: 8234
+    components:
+    - type: Transform
+      pos: 16.5,12.5
       parent: 60
   - uid: 8711
     components:
@@ -66512,8 +66572,7 @@ entities:
   - uid: 5796
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 1.5,-0.5
+      pos: 0.5,-0.5
       parent: 60
   - uid: 5812
     components:
@@ -66791,11 +66850,6 @@ entities:
     components:
     - type: Transform
       pos: 33.5,-21.5
-      parent: 60
-  - uid: 7648
-    components:
-    - type: Transform
-      pos: 16.5,12.5
       parent: 60
   - uid: 7658
     components:
@@ -68188,6 +68242,75 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 42.5,24.5
       parent: 60
+  - uid: 25359
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -2.5,-8.5
+      parent: 60
+  - uid: 25360
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -2.5,-7.5
+      parent: 60
+  - uid: 25361
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -2.5,-6.5
+      parent: 60
+  - uid: 25362
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -2.5,-5.5
+      parent: 60
+  - uid: 25363
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -2.5,-4.5
+      parent: 60
+  - uid: 25367
+    components:
+    - type: Transform
+      pos: -3.5,-2.5
+      parent: 60
+  - uid: 25368
+    components:
+    - type: Transform
+      pos: -3.5,-1.5
+      parent: 60
+  - uid: 25369
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -2.5,-0.5
+      parent: 60
+  - uid: 25370
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -1.5,-0.5
+      parent: 60
+  - uid: 25375
+    components:
+    - type: Transform
+      pos: 19.5,13.5
+      parent: 60
+  - uid: 25376
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 17.5,12.5
+      parent: 60
+  - uid: 25377
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 18.5,12.5
+      parent: 60
 - proto: DisposalTrunk
   entities:
   - uid: 58
@@ -68469,6 +68592,11 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -94.5,17.5
       parent: 60
+  - uid: 21696
+    components:
+    - type: Transform
+      pos: 19.5,14.5
+      parent: 60
   - uid: 21704
     components:
     - type: Transform
@@ -68497,6 +68625,12 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 57.5,20.5
+      parent: 60
+  - uid: 25357
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -3.5,-9.5
       parent: 60
 - proto: DisposalUnit
   entities:
@@ -68782,6 +68916,11 @@ entities:
     components:
     - type: Transform
       pos: -48.5,2.5
+      parent: 60
+  - uid: 25371
+    components:
+    - type: Transform
+      pos: 0.5,0.5
       parent: 60
 - proto: DogBed
   entities:
@@ -100242,6 +100381,14 @@ entities:
     - type: Transform
       pos: 16.5,-78.5
       parent: 60
+- proto: GlassBoxLaserFilled
+  entities:
+  - uid: 653
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -4.5,-2.5
+      parent: 60
 - proto: GravityGenerator
   entities:
   - uid: 11694
@@ -109752,6 +109899,18 @@ entities:
     - type: Transform
       pos: 6.57388,-7.3136106
       parent: 60
+- proto: Intellicard
+  entities:
+  - uid: 23160
+    components:
+    - type: Transform
+      pos: -106.55485,22.804966
+      parent: 60
+  - uid: 25392
+    components:
+    - type: Transform
+      pos: -106.41422,22.633091
+      parent: 60
 - proto: IntercomAll
   entities:
   - uid: 2387
@@ -110475,9 +110634,9 @@ entities:
     - type: Transform
       pos: 33.5,-35.5
       parent: 60
-- proto: LockerCaptainFilled
+- proto: LockerCaptainFilledNoLaser
   entities:
-  - uid: 8234
+  - uid: 21695
     components:
     - type: Transform
       pos: -6.5,-2.5
@@ -111653,6 +111812,13 @@ entities:
     - type: Transform
       pos: -45.51169,-10.154201
       parent: 60
+- proto: MechEquipmentGrabberSmall
+  entities:
+  - uid: 25380
+    components:
+    - type: Transform
+      pos: 49.47655,18.540401
+      parent: 60
 - proto: MedicalBed
   entities:
   - uid: 108
@@ -112381,6 +112547,13 @@ entities:
     components:
     - type: Transform
       pos: 22.5,-29.5
+      parent: 60
+- proto: NTDefaultCircuitBoard
+  entities:
+  - uid: 25383
+    components:
+    - type: Transform
+      pos: -113.49515,8.531494
       parent: 60
 - proto: NuclearBomb
   entities:
@@ -114753,11 +114926,6 @@ entities:
       parent: 60
 - proto: PottedPlantBioluminscent
   entities:
-  - uid: 5014
-    components:
-    - type: Transform
-      pos: -4.5,-3.5
-      parent: 60
   - uid: 7412
     components:
     - type: Transform
@@ -131544,6 +131712,13 @@ entities:
       parent: 60
     - type: SpamEmitSound
       enabled: False
+- proto: SpawnMechRipley
+  entities:
+  - uid: 25379
+    components:
+    - type: Transform
+      pos: 47.5,17.5
+      parent: 60
 - proto: SpawnMobAlexander
   entities:
   - uid: 24247
@@ -154867,11 +155042,6 @@ entities:
     - type: Transform
       pos: -1.5,-2.5
       parent: 7536
-  - uid: 23160
-    components:
-    - type: Transform
-      pos: -111.5,23.5
-      parent: 60
 - proto: WeedSpray
   entities:
   - uid: 8198
@@ -155365,6 +155535,42 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -106.5,26.5
+      parent: 60
+  - uid: 25384
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -113.5,8.5
+      parent: 60
+  - uid: 25385
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -112.5,8.5
+      parent: 60
+  - uid: 25386
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -110.5,8.5
+      parent: 60
+  - uid: 25387
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -109.5,8.5
+      parent: 60
+  - uid: 25390
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -112.5,11.5
+      parent: 60
+  - uid: 25391
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -110.5,11.5
       parent: 60
 - proto: WindoorSecureEngineeringLocked
   entities:
@@ -159793,6 +159999,18 @@ entities:
     components:
     - type: Transform
       pos: -13.5,-19.5
+      parent: 60
+  - uid: 25388
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -110.5,8.5
+      parent: 60
+  - uid: 25389
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -112.5,8.5
       parent: 60
 - proto: Wirecutter
   entities:
