Syndicate runner bundle, blood-red speed boots, tactical syndicate headband, smoke screen implant

--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -819,6 +819,16 @@
   - UplinkDisruption
 
 - type: listing
+  id: UplinkDuffelRunner
+  name: uplink-duffel-runner-name
+  description: uplink-duffel-runner-desc
+  productEntity: ClothingBackpackDuffelSyndicateRunnerBundle
+  cost:
+    Telecrystal: 6
+  categories:
+  - UplinkDisruption
+
+- type: listing
   id: UplinkPowerSink
   name: uplink-power-sink-name
   description: uplink-power-sink-desc
@@ -1082,6 +1092,17 @@
     - UplinkImplants
 
 - type: listing
+  id: UplinkSmokeScreenImplanter
+  name: uplink-smoke-screen-implanter-name
+  description: uplink-smoke-screen-implanter-desc
+  icon: { sprite: Objects/Weapons/Grenades/smoke.rsi, state: icon }
+  productEntity: SmokeScreenImplanter
+  cost:
+    Telecrystal: 2
+  categories:
+  - UplinkImplants
+
+- type: listing
   id: UplinkMicroBombImplanter
   name: uplink-micro-bomb-implanter-name
   description: uplink-micro-bomb-implanter-desc
@@ -1262,6 +1283,16 @@
   productEntity: ClothingShoesBootsMagSyndie
   cost:
     Telecrystal: 4
+  categories:
+  - UplinkWearables
+
+- type: listing
+  id: UplinkClothingShoesBootsSpeedSyndie
+  name: uplink-clothing-shoes-boots-speed-syndie-name
+  description: uplink-clothing-shoes-boots-speed-syndie-desc
+  productEntity: ClothingShoesBootsSpeedSyndicate
+  cost:
+    Telecrystal: 5
   categories:
   - UplinkWearables
 
