--- a/Resources/Prototypes/Maps/meta.yml
+++ b/Resources/Prototypes/Maps/meta.yml
@@ -58,5 +58,5 @@
             Mime: [ 1, 1 ]
             Musician: [ 1, 1 ]
             #silicon
-            StationAI: [ 1, 1 ]
+            StationAi: [ 1, 1 ]
             Borg: [ 2, 2 ]
